--- a/Resume.html
+++ b/Resume.html
@@ -20,5 +20,5 @@
     </header>
     <main>
     <section class="about"><h1>Resume</h1>
-     <img class="resume" src="images/resume.png" alt="Ellen Heunisch resume">   
+     <img class="resume" src="images/resume.png" alt="Ellen Heunisch resume"></section>
     </main>
