--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
   <header>
     <div class="logo">MyPortfolio</div>
-    <img src="images/betterlogo.svg" alt="Ellen Heunisch logo" width="500">
+    <img src="Images/betterlogo.svg" alt="Ellen Heunisch logo" width="500">
     <nav>
        <a href="index.html" class="active">home</a>
        <a href="about.html">About</a>
